--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,11 @@
 
   .main-section {
     width: 82%;
+
+    .container {
+      height: 100%;
+      width: 82%;
+      margin: auto;
+    }
   }
 }
