--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -4,6 +4,7 @@
   border-radius: 4px;
   height: auto;
   border: 1px solid #e1e3e7;
-  box-shadow: 2px 2px 2px 3px #f4f3f0;
+  box-shadow: 0 2px 4px 0 rgba(15, 15, 15, 0.1),
+    0 0 0 1px rgba(15, 15, 15, 0.06);
   margin-top: 40px;
 }
