--- a/src/components/NavSection/style.scss
+++ b/src/components/NavSection/style.scss
@@ -1,4 +1,6 @@
 .nav-section {
+  height: 100%;
+
   .nav-header {
     margin: 25px 17px;
     color: #203354;
@@ -35,6 +37,10 @@
     margin-left: 24px;
     margin-top: 35px;
     font-size: 14px;
+    display: flex;
+    height: 70%;
+    flex-direction: column;
+    justify-content: space-between;
 
     .nav-link {
       display: flex;
@@ -54,6 +60,27 @@
 
     .activeRoute {
       color: green;
+    }
+
+    button {
+      width: 180px;
+      padding: 10px 10px;
+      background: #e4f0e1;
+      border: 1px solid rgba(103, 196, 98, 0.4);
+      border-radius: 4px;
+      font-size: 14px;
+
+      .transfer-button {
+        color: #85ce80;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+          font-weight: bold;
+          margin-left: 5px;
+        }
+      }
     }
   }
 }
