Add the server files

--- a/src/components/MainHeader/style.scss
+++ b/src/components/MainHeader/style.scss
@@ -30,6 +30,7 @@ $height: $width/2;
 
       .toggle {
         margin-right: 10px;
+        cursor: pointer;
 
         .toggle-control {
           transition: $transition;
