--- a/src/components/NavSection/style.scss
+++ b/src/components/NavSection/style.scss
@@ -69,6 +69,7 @@
       border: 1px solid rgba(103, 196, 98, 0.4);
       border-radius: 4px;
       font-size: 14px;
+      cursor: pointer;
 
       .transfer-button {
         color: #85ce80;
